--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "johnpbloch/wordpress": "4.4.2",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "civicrm/civicrm": "^4.7"
+    "civicrm/civicrm": "^4.7",
+    "roots/soil": "3.7.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
