--- a/web/app/themes/blueprint/bower.json
+++ b/web/app/themes/blueprint/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "sage",
-  "homepage": "https://roots.io/sage/",
+  "name": "blueprint",
+  "homepage": "https://roots.io/blueprint/",
   "authors": [
     "Ben Word <ben@benword.com>"
   ],
