--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "keywords": [
-    "bedrock", "roots", "wordpress", "civicrm", "composer", "wp"
+    "bedrock", "wordpress", "civicrm", "composer", "wp"
   ],
   "support": {
     "issues": "https://github.com/roots/bedrock/issues",
@@ -30,11 +30,11 @@
       "type": "package",
       "package": {
            "name": "civicrm/civicrm",
-           "version": "4.7.18",
+           "version": "4.7.19",
            "type": "wordpress-plugin",
            "dist": {
                "type": "zip",
-               "url": "https://download.civicrm.org/civicrm-4.7.18-wordpress.zip"
+               "url": "https://download.civicrm.org/civicrm-4.7.19-wordpress.zip"
           }
        }
     }
@@ -43,11 +43,14 @@
     "php": ">=5.5",
     "composer/installers": "~1.2.0",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.7.4",
+    "johnpbloch/wordpress": "4.7.5",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "civicrm/civicrm": "4.7.18",
-    "roots/soil": "3.7.0"
+    "civicrm/civicrm": "4.7.19",
+    "roots/soil": "^3.7.",
+    "wpackagist-plugin/civicrm-admin-utilities": "dev-trunk",
+    "wpackagist-plugin/wp-fail2ban-redux": "^0.3.1",
+    "wpackagist-plugin/updraftplus": "^1.12"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
@@ -61,8 +64,11 @@
     "wordpress-install-dir": "web/wp"
   },
   "scripts": {
+    "post-root-package-install": [
+      "php -r \"copy('.env.example', '.env');\""
+    ],
     "test": [
-      "vendor/bin/phpcs --ignore=web/wp/,vendor/ -n -s ."
-    ]
+      "vendor/bin/phpcs"
+    ] 
   }
 }
