--- a/composer.json
+++ b/composer.json
@@ -30,23 +30,23 @@
       "type": "package",
       "package": {
            "name": "civicrm/civicrm",
-           "version": "4.7.24",
+           "version": "5.4.1",
            "type": "wordpress-plugin",
            "dist": {
                "type": "zip",
-               "url": "https://download.civicrm.org/civicrm-4.7.24-wordpress.zip"
+               "url": "https://download.civicrm.org/civicrm-5.4.1-wordpress.zip"
           }
        }
     }
   ],
   "require": {
-    "php": ">=5.5",
-    "composer/installers": "~1.2.0",
+    "php": ">=5.6",
+    "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.8.2",
-    "oscarotero/env": "^1.0",
+    "johnpbloch/wordpress": "4.9.8",
+    "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "civicrm/civicrm": "4.7.24",
+    "civicrm/civicrm": "5.4.1",
     "roots/soil": "^3.7.",
     "wpackagist-plugin/civicrm-admin-utilities": "dev-trunk",
     "wpackagist-plugin/wp-fail2ban-redux": "^0.3.1",
