--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,9 @@
   "require": {
     "php": ">=7.0",
     "composer/installers": "^1.4",
-    "vlucas/phpdotenv": "^2.0.1",
+    "vlucas/phpdotenv": "^3.4.0",
     "johnpbloch/wordpress": "5.2.2",
-    "oscarotero/env": "^1.1.0",
+    "oscarotero/env": "^1.2.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "civicrm/civicrm": "5.14.1",
     "roots/soil": "^3.7.",
@@ -53,7 +53,8 @@
     "wpackagist-plugin/updraftplus": "^1.12"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.5.1"
+    "squizlabs/php_codesniffer": "^3.4.2",
+    "roave/security-advisories": "dev-master"
   },
   "extra": {
     "installer-paths": {
@@ -68,7 +69,7 @@
       "php -r \"copy('.env.example', '.env');\""
     ],
     "test": [
-      "vendor/bin/phpcs"
+      "phpcs"
     ] 
   }
 }
